# SEAK

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.js  README.md  build.gradle  cli.sh  cli_autocomplete.sh  docker-compose.base.yml  docker-compose.multi.yml  docker-compose.single.yml  docker-compose.yml  gradle.properties  nx.json  package-lock.json  package.json  pyproject.toml  settings.gradle
.github/: dependabot.yml
.github/workflows/: ci-java.yml  ci-node.yml  ci-python.yml  ci.yml  codeql.yml  pre-commit.yaml  pull-request-labels.yaml
clients/graphical-user-interface/: .gitignore  README.md  pyproject.toml  run_interface.py
clients/graphical-user-interface/interface/: account_window.py  candlestick_chart.py  login_window.py  main_interface.py
clients/graphical-user-interface/quickfix_client_gui/: run_interface.py
clients/graphical-user-interface/quickfix_client_gui/db/: database_manager.py
clients/graphical-user-interface/quickfix_client_gui/interface/: candlestick_chart.py  edit_order_window.py  login_window.py  main_interface.py  order_window.py
clients/graphical-user-interface/tests/: test_candlestick.py  test_login_window.py
clients/quickfix-client/: .gitignore  .pylintrc  README.md  latency.sh  project.json  pyproject.toml  requirements.txt  run_interface.py
clients/quickfix-client/broker_quickfix_client/: __init__.py  application.py  constant.py  decorators.py  main.py
clients/quickfix-client/broker_quickfix_client/handlers/: execution_report.py  market_data_request_reject.py  market_data_snapshot_full_refresh.py  order_cancel_reject.py
clients/quickfix-client/broker_quickfix_client/runners/: latency.py  market_data.py  order_book.py
clients/quickfix-client/broker_quickfix_client/utils/: loader.py  logger.py  quickfix.py
clients/quickfix-client/broker_quickfix_client/wrappers/: enums.py  execution_report.py  market_data.py  market_data_request.py  new_order_single.py  order.py  order_cancel_reject.py  order_cancel_replace_request.py  order_cancel_request.py
clients/quickfix-client/config/: FIX44.xml  client.cfg
clients/quickfix-client/db/: database_manager.py  db_utils.py
clients/quickfix-client/interface/: account_window.py  candlestick_chart.py  edit_order_window.py  login_window.py  main_interface.py  order_window.py
clients/quickfix-client/tests/: test_login_window.py  test_main_interface.py
clients/quickfix-client/tests/utils/: test_logger.py
components/market-matcher/: Readme.md  build.gradle  project.json
components/order-book/: Readme.md  build.gradle  project.json
components/order-stream/: Readme.md  build.gradle  project.json
components/pre-processing/: .flake8  .gitignore  .pylintrc  README.md  project.json  pyproject.toml  requirements.dev.txt  requirements.txt
components/pre-processing/pfe_preprocessing/data_agregation/: __init__.py  find_date.py  helpers.py  reader.py
components/pre-processing/pfe_preprocessing/data_completion/: generation.py
components/pre-processing/pre_processing/: constant.py  decorators.py  main.py
components/pre-processing/pre_processing/data_agregation/: find_date.py  helpers.py  reader.py
components/pre-processing/pre_processing/data_completion/: generation.py  helpers.py
components/pre-processing/pre_processing/dataframe_extraction/: day.py  hour.py  month.py  year.py
components/pre-processing/pre_processing/kafka/: admin.py  avro.py  data_pipeline.py  producer.py
components/pre-processing/pre_processing/utils/: loader.py
components/pre-processing/tests/pre_processing/utils/: test_logger.py
components/quickfix-relay/: build.gradle  project.json
components/quickfix-server/: Readme.md  build.gradle  (+1 more)
components/website-backend/: .env.sample  .gitignore  README.md  pyproject.toml
components/website-backend/app/: command.py  dependencies.py  main.py
components/website-backend/app/api/v1/endpoints/: account.py  auth.py  balance.py  market_data.py  stock.py
components/website-backend/app/commands/: add_user.py  delete_user.py  init_db.py  migrate_db.py
components/website-backend/app/core/: auth.py  config.py  middleware.py  security.py  translation.py  types.py
components/website-backend/app/core/utils/backend/: alert_backend.py
components/website-backend/app/crud/: crud_account.py
components/website-backend/app/crud/redis/: balance.py  stock.py
components/website-backend/app/db/: base.py  pre_start.py
components/website-backend/app/db/databases/: database_interface.py  postgres.py  sqlite.py
components/website-backend/app/db/redis/: redis.py
components/website-backend/app/models/: __init__.py  account.py  stock.py
components/website-backend/app/schemas/: account.py  balance.py  market_data.py  stock.py
components/website-backend/app/services/: quickfix.py
components/website-backend/app/utils/: initialize_service_accounts.py
components/website-backend/test/app/: test_command.py  test_dependencies.py
components/website-backend/test/app/api/v1/endpoints/: test_account.py  test_auth.py
components/website-backend/test/app/core/: test_config.py
components/website-backend/test/app/db/databases/: test_sqlite.py
components/website-backend/test/app/schemas/: test_account.py
components/website-backend/tests/: base_test.py
components/website-backend/tests/app/: test_dependencies.py  test_main.py
components/website-backend/tests/app/api/v1/: test_api.py
components/website-backend/tests/app/api/v1/endpoints/: test_account.py  test_auth.py
components/website-backend/tests/app/core/: test_auth.py  test_config.py  test_security.py
components/website-backend/tests/app/core/utils/backend/: test_alert_backend.py
components/website-backend/tests/app/crud/: test_base.py
components/website-backend/tests/app/db/: test_pre_start.py
components/website-backend/tests/app/db/databases/: test_postgres.py
components/website-backend/tests/app/schemas/: test_account.py
docs/: Grafana.md
gradle/: libs.versions.toml
pfe_preprocessing/: constant.py  decorators.py  main.py
(+372 files in other folders)
