[tool.poetry]
name = "pfe-preprocessing"
version = "0.1.0"
description = ""
authors = ["Samuel Guillemet <samuel.guillemet@telecom-sudparis.eu>"]
readme = "README.md"
packages = [{ include = "pfe_preprocessing" }]

[tool.poetry.dependencies]
python = "~3.11"
matplotlib = "^3.8.0"
pandas = "^2.1.1"
numpy = "^1.26.1"
confluent-kafka = "^2.2.0"
requests = "^2.31.0"
fastavro = "^1.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
mypy = "^1.4.1"
mypy-extensions = "^1.0.0"
pylint = "^2.17.4"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
no_strict_optional = true
ignore_missing_imports = true
files = "^(pfe_preprocessing/|tests/)"
