[tool.poetry]
name = "broker-quickfix-client"
version = "0.4.0"
description = "Interact with a broker using the QuickFIX library"
authors = ["Samuel Guillemet <samuel.guillemet@telecom-sudparis.eu>"]
readme = "README.md"
packages = [{ include = "broker_quickfix_client" }]

[tool.poetry.dependencies]
python = ">=3.10"
quickfix = "^1.15.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
mypy = "^1.4.1"
mypy-extensions = "^1.0.0"
pylint = "^2.17.4"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
types-pyyaml = "^6.0.12.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_first_party = "broker_quickfix_client"

[tool.mypy]
no_strict_optional = true
ignore_missing_imports = true
files = "^(broker_quickfix_client/|tests/)"
