[tool.poetry]
name = "pre-processing"
version = "0.4.0"
description = "Pre-processing of data to send to kafka"
authors = ["Samuel Guillemet <samuel.guillemet@telecom-sudparis.eu>"]
readme = "README.md"
packages = [{ include = "pre_processing" }]

[tool.poetry.scripts]
pre-processing = "pre_processing.main:main"

[tool.poetry.dependencies]
python = ">=3.10"
matplotlib = "^3.8.0"
pandas = "^2.1.1"
numpy = "^1.26.1"
confluent-kafka = "^2.2.0"
requests = "^2.31.0"
fastavro = "^1.9.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
mypy = "^1.4.1"
mypy-extensions = "^1.0.0"
pylint = "^2.17.4"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
types-pyyaml = "^6.0.12.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_first_party = "pre_processing"

[tool.mypy]
ignore_missing_imports = true
files = "^(pre_processing/|tests/)"

[tool.pytest.ini_options]
norecursedirs = [
  ".venv",
  ".git",
  "__pycache__",
  "__init__.py",
  ".mypy_cache",
  ".pytest_cache",
]
addopts = [
  "--cov=pre_processing",
  "--cov-report=term-missing",
  "--cov-report=xml",
]
log_cli = false
log_cli_level = "INFO"
filterwarnings = "ignore::DeprecationWarning"


[tool.coverage.run]
omit = []
